/*
 * This file was generated by the Gradle 'init' task.
 *
 * This generated file contains a sample Java application project to get you started.
 * For more details on building Java & JVM projects, please refer to https://docs.gradle.org/8.14/userguide/building_java_projects.html in the Gradle documentation.
 */

plugins {
    application
    kotlin("jvm") version "2.1.21"
    java
    id("com.gradleup.shadow") version "8.3.6"
}

group = "org.db_poultry"
version = "2.0"

repositories {
    mavenCentral()
}

// JavaFX
val javafxVersion = "23.0.1"
val platform = when (System.getProperty("os.name").lowercase()) {
    "mac os x", "macos" -> "mac"
    "linux" -> "linux"
    else -> "win"
}

dependencies {
    // Add any other dependencies here
    // Put the dependency below the comment where that dependency
    // belongs
    // Example, we add the JUnit dependency under the header
    // "Dependencies for QA" since JUnit will be used by the QAs
    //
    // Follow the format:
    //
    //      // <name of dependency>
    //      implementation("...")
    //
    // If unsure, message @zrygan

    // Dependencies for Dev
    // Kotlin
    implementation(kotlin("stdlib"))

    // Dependencies for UI/UX
    val javafxModules = listOf("base", "graphics", "controls", "fxml")
    javafxModules.forEach {
        implementation("org.openjfx:javafx-$it:$javafxVersion:$platform")
    }

    // JavaFX Icons (https://kordamp.org/ikonli/#_javafx)
    implementation("org.kordamp.ikonli:ikonli-core:12.4.0")
    implementation("org.kordamp.ikonli:ikonli-javafx:12.4.0")
    implementation("org.kordamp.ikonli:ikonli-fontawesome6-pack:12.4.0")

    // Dependencies for Database
    // PostgresSQL
    implementation("org.postgresql:postgresql:42.7.3")

    // Dot Env (.env file)
    implementation("io.github.cdimascio:dotenv-java:3.0.0")

    // Dependencies for QA
    // JUnit
    testImplementation("org.junit.jupiter:junit-jupiter:5.10.0")
    testImplementation(kotlin("test"))
}

sourceSets {
    main {
        java {
            srcDirs("src/main/java")
        }
        kotlin {
            srcDirs("src/main/kotlin")
        }
    }

    test {
        java {
            srcDirs("src/test/java")
        }
        kotlin {
            srcDirs("src/test/kotlin")
        }
    }
}

application {
    mainClass.set("org.db_poultry.AppKt")
}

kotlin {
    jvmToolchain {
        languageVersion.set(JavaLanguageVersion.of(21))
    }
}

java {
    toolchain {
        languageVersion.set(JavaLanguageVersion.of(21))
    }
}

tasks.test {
    useJUnitPlatform()
}

// Shadow JAR configuration for creating fat JAR
tasks.shadowJar {
    archiveBaseName.set("db-poultry")
    archiveClassifier.set(version.toString())
    archiveVersion.set("")

    // Ensure the main class is set in the manifest
    manifest {
        attributes["Main-Class"] = "org.db_poultry.AppKt"
    }

    // Include all runtime dependencies
    configurations = listOf(project.configurations.runtimeClasspath.get())

    // Merge service files to avoid conflicts
    mergeServiceFiles()
}